<resources>
    <string name="app_name">Calendario Matemático CIEMAC</string>
    <string name="cursos">Mis cursos</string>
    <string name="cursosActivity">Cursos</string>
    <string name="cursosDisponibles">Cursos disponibles</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="ingresar">INGRESAR CON GOOGLE</string>
    <string name="titulo">Calendario Matemático CIEMAC</string>
    <string name="notifica">NOTIFICACIONES</string>
    <string name="logout">SALIR</string>
    <string name="academico">CURSOS</string>
    <string name="eliminar_contenido">Eliminar contenido</string>
    <string name="eliminar_contenido_msg">¿Está seguro que quiere eliminar el contenido ?</string>
    <string name="fallaLogin">Ha fallado el ingreso, no hay conexión</string>
    <string name="unknown_response">Solicitud desconocida</string>
    <string name="about">Acerca de la app</string>
    <string name="editar_curso">Editar Curso</string>
    <string name="editar_periodo">Periodo del Curso</string>
    <string name="editar_anno">Año del Curso</string>
    <string name="codigo">Código del Curso</string>
    <string name="nombre_curso">Nombre del Curso</string>
    <string name="agregarNuevoCurso">Agregar nuevo Curso</string>
    <string name="agregarCurso">Agregar a cursos</string>
    <string name="agregar">Agregar Curso</string>
    <string name="aceptar">Aceptar</string>
    <string name="buscar">Buscar</string>
    <string name="Ejercicios">Ejercicios</string>
    <string name="AgregarE">Agregar ejercicio</string>
    <string name="ModificarrE">Modificar ejercicio</string>
    <string name="nombreEjercicio">Nombre del ejercicio</string>
    <string name="imgProblema">Imagen del problema</string>
    <string name="imgPlanteo">Imagen del planteamiento</string>
    <string name="imgSolucion">Imagen de la solución</string>
    <string name="fecha">Fecha del ejercicio</string>
    <string name="temas">Temas</string>
    <string name="temaModificar">Modificar tema</string>
    <string name="temaAgregar">Agregar tema</string>
    <string name="aboutApp">La aplicación calendario matemático CIEMAC de la Escuela de Matemática
        del Instituto Tecnológico de Costa Rica, tiene el objetivo de fomentar el razonamiento matemático por medio de esta
        herramienta tecnológica brindando a la población estudiantil la ventaja de llevarlo en forma digital
        para resolver ejercicios cada día.
    </string>
    <string name="developers"><b>Desarolladoras:</b>\n Valeria Herrera  Rodríguez\nEstudiante de computación\n
    Pamela Varela Alfaro\n Estudiante de computación</string>
    <string name="coordinadora">
        <b>Coordinadora del proyecto:</b>\n María Estrada Sánchez\n@2019 Instituto Tecnológico de Costa Rica </string>
    <string name="notifica_">Activar o desactivar notificaciones con el calendario de Google</string>
    <string name="msjnotificaA">¿Desea recibir las notificaciones del curso ?</string>
    <string name="msjnotificaD">¿Desea desactivar las notificaciones del curso ?</string>
</resources>
