<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/texto4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/roboto"
        android:text="@string/editar_curso"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/annoE"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="187dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/editar_anno"
        android:typeface="normal" />

    <TextView
        android:id="@+id/codigoE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/texto4"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="57dp"
        android:fontFamily="@font/roboto"
        android:text="@string/codigo"
        android:textSize="18sp"
        android:typeface="normal" />

    <TextView
        android:id="@+id/nombreE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/texto4"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="101dp"
        android:fontFamily="@font/roboto"
        android:text="@string/nombre_curso"
        android:textSize="18sp"
        android:typeface="normal" />

    <EditText
        android:id="@+id/periodoE"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/annoE"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="133dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/editar_periodo"
        android:inputType="text"
        android:typeface="normal" />

</RelativeLayout>