<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <TextView
        android:id="@+id/texto3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto"
        android:text="@string/AgregarE"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/nombreEj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/nombreEjercicio"
        android:typeface="normal" />


    <EditText
        android:id="@+id/img1"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/imgProblema"
        android:typeface="normal" />

    <EditText
        android:id="@+id/img2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/imgPlanteo"
        android:typeface="normal" />

    <EditText
        android:id="@+id/img3"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/imgSolucion"
        android:typeface="normal" />

    <TextView
        android:id="@+id/fecha"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/fecha"
        android:inputType="none"
        android:textSize="18sp"
        android:typeface="normal" />

    <ImageButton
        android:id="@+id/btnSolucion"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="230dp"
        android:layout_marginTop="-90dp"
        android:background="@color/transparente"
        app:srcCompat="@drawable/download" />

    <ImageButton
        android:id="@+id/btnPlanteo"
        android:layout_width="55dp"
        android:layout_height="51dp"
        android:layout_marginStart="230dp"
        android:layout_marginTop="-100dp"
        android:background="@color/transparente"
        app:srcCompat="@drawable/download" />


    <ImageButton
        android:id="@+id/btnProblema"
        android:layout_width="55dp"
        android:layout_height="52dp"
        android:layout_marginStart="230dp"
        android:layout_marginTop="-110dp"
        android:background="@color/transparente"
        app:srcCompat="@drawable/download" />

    <ImageButton
        android:id="@+id/btnFecha"
        android:layout_width="55dp"
        android:layout_height="52dp"
        android:layout_marginStart="230dp"
        android:layout_marginTop="110dp"
        android:background="@color/transparente"
        app:srcCompat="@drawable/calendar" />


</LinearLayout>